added endpoint addPet