@@ -3,10 +3,13 @@ package com.example.infrastructure.adapters;
 
 import com.example.domain.core.models.Pet;
 import com.example.domain.ports.outbounds.PetRepository;
+import com.example.infrastructure.entity.PetEntity;
 import com.example.infrastructure.mapper.InfraPetMapper;
 import com.example.infrastructure.repository.InfraPetRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -27,6 +30,12 @@ public class PetAdapter implements PetRepository {
                 .findAll()
                 .stream()
                 .map(infraPetMapper::petEntityToPet)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public Pet savePet(Pet pet) {
+        PetEntity petEntity = infraPetRepository.save(infraPetMapper.petToPetEntity(pet));
+        return infraPetMapper.petEntityToPet(petEntity);
     }
 }
